--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -9,9 +9,11 @@
             type="com.konai.sendbirdapisampleapp.activity.ChannelActivity" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layoutDescription="@xml/activity_channel_xml_constraintlayout3_scene"
         tools:context=".activity.ChannelActivity">
 
         <ImageButton
@@ -79,19 +81,19 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/bottomSendLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="0dp"
-            android:layout_height="?android:attr/actionBarSize">
+            android:layout_height="?android:attr/actionBarSize"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
 
             <EditText
                 android:id="@+id/messageEditText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:includeFontPadding="false"
                 android:layout_marginLeft="10dp"
+                android:includeFontPadding="false"
                 app:layout_constraintBottom_toBottomOf="@id/sendButton"
                 app:layout_constraintEnd_toStartOf="@id/sendButton"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -107,75 +109,111 @@
                 android:text="전송"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageView
+            android:id="@+id/channelDetailBackground"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/gray" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/channelDetailLayout"
-            android:layout_width="350dp"
+            android:layout_width="330dp"
             android:layout_height="0dp"
-            android:background="@color/gray_background"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:background="@color/gray_background">
+
             <TextView
                 android:id="@+id/topTextView"
                 android:layout_width="0dp"
-                android:text="채널 상세 정보"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:textStyle="bold"
-                android:textSize="18sp"
+                android:layout_height="?android:attr/actionBarSize"
+                android:background="@color/gray_icon"
                 android:gravity="center"
-                app:layout_constraintTop_toTopOf="parent"
-                android:background="@color/gray"
-                android:layout_height="?android:attr/actionBarSize"/>
+                android:text="채널 상세 정보"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/membersTextView"
-                android:text="대화 상대"
-                android:textStyle="bold"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
+                android:text="대화상대"
                 android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/topTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-            <androidx.recyclerview.widget.RecyclerView
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/topTextView" />
+
+            <LinearLayout
                 android:id="@+id/membersListRecyclerView"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/membersTextView"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:orientation="vertical"
+                android:layout_marginLeft="5dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/membersTextView">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/myIdDetailLayoutTextView"
+                        tools:text="My Nick"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/partnerIdDetailLayoutTextView"
+                        tools:text="My Nick"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+            </LinearLayout>
+
             <androidx.viewpager.widget.ViewPager
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/membersListRecyclerView"
-                android:background="@color/gray"
                 android:layout_width="0dp"
-                android:layout_height="1dp"/>
+                android:layout_height="1dp"
+                android:background="@color/gray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/membersListRecyclerView" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/bottomMenuLayout"
                 android:layout_width="0dp"
-                android:background="@color/gray"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_height="?android:attr/actionBarSize"
+                android:background="@color/gray_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_height="?android:attr/actionBarSize">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
                 <ImageButton
-                    android:id="@+id/leaveChannelButton"
-                    android:background="@color/transparent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:src="@drawable/ic_baseline_logout_24"
+                    android:id="@+id/deleteChannelButton"
                     android:layout_width="@dimen/button_size"
-                    android:layout_height="@dimen/button_size"/>
+                    android:layout_height="@dimen/button_size"
+                    android:background="@color/transparent"
+                    android:src="@drawable/ic_baseline_logout_24"
+                    android:onClick="@{()->channelActivity.onDeleteChannelButtonClicked()}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
