--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
         tools:context=".activity.LoginActivity">
 
         <Button
+            android:text="update"
             android:id="@+id/publicKeyButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
