--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -77,6 +77,7 @@
             android:layout_width="@dimen/button_size"
             android:layout_height="@dimen/button_size"
             android:layout_margin="10dp"
+            android:enabled="false"
             app:fabCustomSize="50dp"
             app:backgroundTint="@color/gray"
             android:src="@drawable/ic_baseline_key_off_24"
