--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="channelActivity"
             type="com.konai.sendbirdapisampleapp.activity.ChannelActivity" />
@@ -27,7 +28,6 @@
             app:layout_constraintBottom_toTopOf="@id/div1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
 
         <ImageButton
@@ -78,11 +78,14 @@
             android:layout_height="@dimen/button_size"
             android:layout_margin="10dp"
             android:enabled="false"
-            app:fabCustomSize="50dp"
-            app:backgroundTint="@color/gray"
+            android:onClick="@{()->channelActivity.onDecryptionButtonClicked()}"
             android:src="@drawable/ic_baseline_key_off_24"
+            app:backgroundTint="@color/gray"
+            app:fabCustomSize="50dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/div2" />
+            app:layout_constraintTop_toBottomOf="@id/div1"
+             />
 
         <View
             android:id="@+id/div2"
@@ -214,8 +217,8 @@
                 android:id="@+id/sharedSecretKeyLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginLeft="5dp"
+                android:orientation="horizontal"
                 app:layout_constraintBottom_toTopOf="@id/bottomMenuLayout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
