--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,45 +4,77 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="loginActivity"
             type="com.konai.sendbirdapisampleapp.activity.LoginActivity" />
     </data>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        tools:context=".activity.LoginActivity">
+        android:layout_height="match_parent">
 
-        <EditText
-            android:id="@+id/userIdEditText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="사용자 아이디 입력" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            tools:context=".activity.LoginActivity">
 
-        <EditText
-            android:id="@+id/nickNameEditText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="사용자 닉네임 입력" />
+            <EditText
+                android:id="@+id/userIdEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="사용자 아이디 입력" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/loginButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            android:onClick="@{()->loginActivity.onLogInButtonClicked()}"
-            android:text="로그인" />
+            <EditText
+                android:id="@+id/nickNameEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="사용자 닉네임 입력" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/UiKitAppLaunchButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:enabled="false"
-            android:onClick="@{()->loginActivity.onUiKitLaunchButtonClicked()}"
-            android:text="ui kit app start" />
-    </LinearLayout>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/loginButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:onClick="@{()->loginActivity.onLogInButtonClicked()}"
+                android:text="로그인" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/UiKitAppLaunchButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:enabled="false"
+                android:onClick="@{()->loginActivity.onUiKitLaunchButtonClicked()}"
+                android:text="ui kit app start" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:visibility="gone"
+            android:orientation="vertical"
+            android:id="@+id/progressBarLayout"
+            android:gravity="center"
+            android:background="@color/gray"
+            android:alpha="0.6"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ProgressBar
+                android:layout_width="100dp"
+                android:layout_height="100dp"/>
+
+            <TextView
+                android:text="로그인 중입니다..."
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </FrameLayout>
+
+
 </layout>
