--- a/app/src/main/res/xml/activity_channel_xml_constraintlayout3_scene.xml
+++ b/app/src/main/res/xml/activity_channel_xml_constraintlayout3_scene.xml
@@ -39,6 +39,14 @@
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent" />
+        <Constraint
+            android:id="@+id/decryptionButton"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
+            android:layout_marginTop="10dp"
+            motion:layout_constraintTop_toBottomOf="@id/div1"
+            motion:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -58,5 +66,12 @@
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent" />
+        <Constraint
+            android:id="@+id/decryptionButton"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
+            motion:layout_constraintBottom_toTopOf="parent"
+            motion:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
 </MotionScene>
