commit before push

--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -80,7 +80,7 @@
             android:enabled="false"
             android:onClick="@{()->channelActivity.onDecryptionButtonClicked()}"
             android:src="@drawable/ic_baseline_key_off_24"
-            app:backgroundTint="@color/gray"
+            app:backgroundTint="#817F7F"
             app:fabCustomSize="50dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +123,6 @@
                 android:background="@color/gray_background"
                 android:onClick="@{()->channelActivity.onSendButtonClicked()}"
                 android:src="@drawable/ic_baseline_send_24"
-                android:text="전송"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
