--- a/app/src/main/res/layout/item_chat_channel_list.xml
+++ b/app/src/main/res/layout/item_chat_channel_list.xml
@@ -58,9 +58,9 @@
             android:layout_height="1dp"
             android:layout_marginTop="10dp"
             android:background="@color/gray"
+            app:layout_constraintBottom_toBottomOf="@id/itemLayout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/itemLayout"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/timeTextView"
@@ -68,9 +68,20 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="15dp"
             android:text="12:00"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/lastMessageTextView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@id/lastMessageTextView"
+            app:layout_constraintTop_toTopOf="@id/lastMessageTextView" />
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:visibility="invisible"
+            android:src="@drawable/ic_baseline_mark_chat_unread_24"
+            app:layout_constraintBottom_toTopOf="@id/timeTextView"
+            app:layout_constraintEnd_toEndOf="@id/timeTextView"
+            app:layout_constraintStart_toStartOf="@id/timeTextView"
+            app:tint="#FF0000" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
