--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -44,7 +44,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/userIdTextView"
             android:layout_width="wrap_content"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="?android:attr/actionBarSize"
             android:layout_marginLeft="15dp"
             android:gravity="center"
             android:text="userNick(UserID)"
