--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:enabled="false"
-                android:onClick="@{()->loginActivity.signInButtonClick()}"
+                android:onClick="@{()->loginActivity.signIn()}"
                 android:text="로그인" />
         </LinearLayout>
 
