--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -47,7 +47,7 @@
             android:layout_height="?android:attr/actionBarSize"
             android:layout_marginLeft="15dp"
             android:gravity="center"
-            android:text="userNick(UserID)"
+            android:text="-"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/backButton"
@@ -120,7 +120,7 @@
                 android:layout_height="@dimen/button_size"
                 android:layout_marginRight="10dp"
                 android:background="@color/gray_background"
-                android:onClick="@{()->channelActivity.onSendButtonClicked()}"
+                android:onClick="@{()->channelActivity.sendMessage()}"
                 android:src="@drawable/ic_baseline_send_24"
                 android:textColor="@color/black"
                 android:textSize="16sp"
