Bad Padding Exception

--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -78,7 +78,7 @@
             android:layout_height="@dimen/button_size"
             android:layout_margin="10dp"
             android:enabled="false"
-            android:onClick="@{()->channelActivity.onDecryptionButtonClicked()}"
+            android:onClick="@{()->channelActivity.decryptMessage()}"
             android:src="@drawable/ic_baseline_key_off_24"
             app:backgroundTint="#817F7F"
             app:fabCustomSize="50dp"
@@ -251,7 +251,7 @@
                     android:layout_width="@dimen/button_size"
                     android:layout_height="@dimen/button_size"
                     android:background="@color/transparent"
-                    android:onClick="@{()->channelActivity.onDeleteChannelButtonClicked()}"
+                    android:onClick="@{()->channelActivity.deleteChannel()}"
                     android:src="@drawable/ic_baseline_logout_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
