--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -3,16 +3,13 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108"
-    android:tint="#0E11D8">
-  <group android:scaleX="2.61"
-      android:scaleY="2.61"
-      android:translateX="22.68"
-      android:translateY="22.68">
+    android:tint="#FFFFFF">
+  <group android:scaleX="2.25504"
+      android:scaleY="2.25504"
+      android:translateX="26.93952"
+      android:translateY="26.93952">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M22,9.97V6c0,-1.1 -0.9,-2 -2,-2H4C2.9,4 2.01,4.9 2.01,6L2,18c0,1.1 0.9,2 2,2h12v-5.03c0,-2.76 2.24,-5 5,-5H22zM20,8l-8,5L4,8V6l8,5l8,-5V8z"/>
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M23,15v-1c0,-1.1 -0.9,-2 -2,-2s-2,0.9 -2,2v1c-0.55,0 -1,0.45 -1,1v3c0,0.55 0.45,1 1,1h4c0.55,0 1,-0.45 1,-1v-3C24,15.45 23.55,15 23,15zM22,15h-2v-1c0,-0.55 0.45,-1 1,-1s1,0.45 1,1V15z"/>
+        android:pathData="M20,4L4,4c-1.1,0 -1.99,0.9 -1.99,2L2,18c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2L22,6c0,-1.1 -0.9,-2 -2,-2zM20,8l-8,5 -8,-5L4,6l8,5 8,-5v2z"/>
   </group>
 </vector>
